Closed Bug 559113 Opened 14 years ago Closed 14 years ago

TM: GCMETER fix dumpGCTimer

Categories

(Core :: JavaScript Engine, defect)

x86
macOS
defect
Not set
normal

Tracking

()

RESOLVED FIXED

People

(Reporter: gwagner, Assigned: gwagner)

Details

(Whiteboard: fixed-in-tracemonkey)

Attachments

(1 file)

Yeah fclose doesn't set the file pointer to null....
Assignee: general → anygregor
Attached patch patchSplinter Review
Attachment #438795 - Attachment is patch: true
Attachment #438795 - Attachment mime type: application/octet-stream → text/plain
Attachment #438795 - Flags: review?(jorendorff)
Attachment #438795 - Flags: review?(jorendorff) → review+
http://hg.mozilla.org/mozilla-central/rev/7ac52d63a1ea
Status: NEW → RESOLVED
Closed: 14 years ago
Resolution: --- → FIXED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: