Bug 559113 - Fix dangling FILE pointer in GCMETER code. r=jorendorff.